--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
   "name": "carlonicora/minimalism-service-logger",
   "description": "Logger service for minimalism",
-  "version": "1.0.0-alpha5",
+  "version": "1.0.0",
   "homepage": "https://carlonicora.com",
   "time": "2020-06-13",
   "license": "MIT",
   "type": "library",
-  "minimum-stability": "alpha",
+  "minimum-stability": "stable",
   "authors": [
     {
       "name": "Carlo Nicora",
@@ -22,7 +22,7 @@
   },
   "require": {
     "php": ">=8.1",
-    "carlonicora/minimalism": "~13.0.1",
+    "carlonicora/minimalism": "~13.0",
     "monolog/monolog": "~2.3"
   }
 }
